svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openstack-vm-migration-service
  namespace: migrate
spec:
  selector:
    app: openstack-vm-migration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 19099
  type: ClusterIP
