ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openstack-vm-migration-ingress
  namespace: migrate
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"  # 连接超时时间，单位为秒
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"     # 发送请求超时时间，单位为秒
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"     # 读取响应超时时间，单位为秒
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"     #设置代理缓冲区的大小
    nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"       #设置代理缓冲区的数量和每个缓冲区的大小
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"#设置繁忙缓冲区的大小
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: es.migrate.org  # 请替换为实际的域名
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openstack-vm-migration-service
                port:
                  number: 80
